config/samples/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: etherpad-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - ""
      secretName: etherpad-tls
  rules:
    - host: ""
      http:
        paths:
          - path: /
            backend:
                serviceName: etherpad
                servicePort: 9001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - ""
      secretName: web-tls
  rules:
    - host: ""
      http:
        paths:
          - path: /
            backend:
                serviceName: jitsi-web
                servicePort: 80
    - host: ""
      http:
        paths:
          - path: /xmpp-websocket
            backend:
              serviceName: jitsi-prosody
              servicePort: 5280
    - host: ""
      http:
        paths:
          - path: /http-bind
            backend:
              serviceName: jitsi-prosody
              servicePort: 5280
